--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   go_router: ^14.2.1
+  path_provider: ^2.1.4
+  path:
 
 dev_dependencies:
   flutter_test:
@@ -30,5 +32,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/
+  - assets/phi-3-mini/
 
